Bug 100731 - Pattern preview doesn't update dynamically
Summary: Pattern preview doesn't update dynamically
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords: regression
: 100743 (view as bug list)
Depends on:
Blocks: Single-Fill-Tab
  Show dependency treegraph
 
Reported: 2016-07-01 15:08 UTC by Rishabh
Modified: 2016-10-25 18:38 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Preview not updated (51.51 KB, image/png)
2016-07-01 15:08 UTC, Rishabh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rishabh 2016-07-01 15:08:01 UTC
Created attachment 126026 [details]
Preview not updated

Steps to reproduce the bug - 

1. Open Impress.
2. Draw a shape and open Area fill dialog.
3. Go to Pattern Tab.
4. Create any pattern using the pattern editor.
5. Change the foreground color and background color.
6. The pattern preview below the preset list doesn't update upon changing the background and foreground color.
7. Click on the pattern editor to modify the pattern pixel, the preview is updated now.
Comment 1 Joel Madero 2016-07-02 05:16:07 UTC
Version: 5.3.0.0.alpha0+
Build ID: ef47ce2397d4ed453fe01d994d13a13f442ec3bb
CPU Threads: 2; OS Version: Linux 3.16; UI Render: default; 
Locale: en-US (en_US.UTF-8)

Confirmed.

Minor - not going to prevent high quality work, may slow it down a tad bit.
Lowest - seems appropriate, very very low impact on professional quality work
Comment 2 Heiko Tietze 2016-07-03 21:21:22 UTC
*** Bug 100743 has been marked as a duplicate of this bug. ***
Comment 3 Heiko Tietze 2016-07-03 21:33:07 UTC
In master we have a new section for patterns. The color is never used there. Neither applied to the preset's preview or stored with it nor used on the orginal shape. 

PS: The trick is to click somehow between preview and editor. And to not use a diagonal only. Strange thing. Setting to medium/normal for master since it's an essential aspect of this section.
Comment 4 Regina Henschel 2016-07-14 00:47:25 UTC
Till 2016-01-18 the behavior was: Changing the color, updated the preview; and changing a pixel, did not updated the preview. (That was wrong too, but the other way round.)
Since 2016-01-22 the behavior is: Changing the color, does not update the preview; but changing a pixel updates the preview.

In LO4.2 it was OK, both updated the preview, changing the color and changing a pixel as well.

In LO4.3 there had been an issue, that the pattern editor had crashed.

Because it had worked in 4.2, it is an regression.
Comment 5 Caolán McNamara 2016-07-18 12:46:31 UTC
I think this is weirder than it looks. The bitmap before and after the color change is the same pattern, just a different color. So I think the graphic caching thing believes the two images are the same image because they have the same checksum for their contents cause the checksum stuff doesn't checksum the palette which is the bit that changes.
Comment 6 Commit Notification 2016-07-18 14:44:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8624d2c8e3be89c794d3cfcfb72685fcb18e4d24

Resolves: tdf#100731 include palette in checksum

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-07-21 15:54:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a6e3f11f74959c1e756acb8a8f223075fcb43391&h=libreoffice-5-2

Resolves: tdf#100731 include palette in checksum

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.