Resolves: tdf#100731 include palette in checksum

Change-Id: I084d840b9fa078ebea3ff1471d8c8bc88171abc7